--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -67,7 +67,7 @@
       <div id="icon_image">
         <%= @user.image.attached? ? (image_tag @user.image) : (gravatar_for @user) %>
       </div>
-      <div id="image_preview">
+      <div id="icon_preview">
       </div>
     </span>
     <span class="image inline-block">
