--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -10,7 +10,7 @@
   <% else %>
     <div><%= hidden_field_tag :userprofile_id, current_user.id, { id: SecureRandom.hex(4) } %></div>
   <% end %>
-  <%= button_tag :type => "submit", class: "btn-link" do %>
+  <%= button_tag type: "submit", class: "btn-link" do %>
     <span class="fas fa-thumbs-up like-btn-unlike"></span>
   <% end %>
 <% end %>
