--- a/app/views/likes/_unlike.html.erb
+++ b/app/views/likes/_unlike.html.erb
@@ -7,7 +7,7 @@
   <% else %>
     <div><%= hidden_field_tag :userprofile_id, current_user.id, { id: SecureRandom.hex(4) } %></div>
   <% end %>
-  <%= button_tag :type => "submit", class: "btn-link" do %>
+  <%= button_tag type: "submit", class: "btn-link" do %>
     <span class="fas fa-thumbs-up like-btn"></span>
   <% end %>
 <% end %>
