update about page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",  "https://alfnet.info/profile", target: :_blank, rel: "noopener noreferrer" %></li>
+      <li><%= link_to "About",  "https://alfnet.info/web-dev05/", target: :_blank, rel: "noopener noreferrer" %></li>
       <li><%= link_to "Contact", "https://alfnet.info/contact", target: :_blank, rel: "noopener noreferrer" %></li>
       <!--<li><%= link_to "News", "https://alfnet.info", target: :_blank, rel: "noopener noreferrer" %></li>-->
       <li><a href="<%= ENV["LINE_ADD_URL"] %>"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" height="28" border="0"></a></li>
