adjust btn-post's padding

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1188,7 +1188,7 @@ span.image {
       width: 48px;
       position: absolute;
       right: 0.5px;
-      padding: 1px 0;
+      padding: 0;
     }
     .image {
       .btn-image {
