update description of slides help

--- a/app/views/helps/googleslides.html.erb
+++ b/app/views/helps/googleslides.html.erb
@@ -2,7 +2,7 @@
 
 <div class='method_container'>
   <h1>Google Slides 投稿方法</h1>
-  <p class='help_description inline-block'>学校アカウントや企業アカウントを使用している場合、埋め込みコードの取得（公開等）を禁止している場合があります。必要に応じて組織内の管理者に問い合わせてください。</p>
+  <p class='help_description inline-block'>学校アカウントや企業アカウントを使用している場合、埋め込みコードの取得（公開等）を禁止している場合があります。必要に応じて組織内の管理者に問い合わせてください。<br>なお、<strong>Google ドライブ に保存されている PowerPoint も本ページの方法で投稿することができます</strong>（Google Slides の編集画面よりも、レイアウトは崩れにくく投稿できます）。</p>
   <ol>
     <li>
       <p>投稿したい Google Slides を開く</p>
