--- a/app/views/helps/powerpoint.html.erb
+++ b/app/views/helps/powerpoint.html.erb
@@ -2,7 +2,7 @@
 
 <div class='method_container'>
   <h1>PowerPoint 投稿方法</h1>
-  <p class='help_description inline-block'>学校アカウントや企業アカウントを使用している場合、埋め込みコードの取得（公開等）を禁止している場合があります。必要に応じて組織内の管理者に問い合わせてください。</p>
+  <p class='help_description inline-block'>学校アカウントや企業アカウントを使用している場合、埋め込みコードの取得（公開等）を禁止している場合があります。必要に応じて組織内の管理者に問い合わせてください。<br>なお、<strong>Google ドライブ に保存されている PowerPoint を投稿したい場合は、コチラの <%= link_to "Google Slides 投稿方法", googleslides_help_path %> を参照してください</strong>（Google Slides の編集画面よりも、レイアウトは崩れにくく投稿できます）。</p>
   <ol>
     <li>
       <p><strong>OneDrive に保存されている</strong>投稿したい PowerPoint を <strong>OneDrive 上（Web版）</strong>で開く</p>
