--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -55,7 +55,15 @@
           <% if micropost.file_link.present? %>
             <div class="links-container">
               <div class="slide-container">
-                <%= micropost.file_link.html_safe %>
+                <% if micropost.file_type == 'pdf_link' %>
+                  <% pdf_slide_link = "https://drive.google.com/viewerng/viewer?embedded=true&url=#{micropost.file_link.html_safe}" %>
+                  <iframe src=<%= pdf_slide_link %>></iframe>
+                <% elsif micropost.file_type == 'pdf_google' %>
+                  <% file_id = micropost.file_link.html_safe.split("/")[5] %>
+                  <iframe src="https://drive.google.com/file/d/<%= file_id %>/preview"></iframe>
+                <% else %>
+                  <%= micropost.file_link.html_safe %>
+                <% end %>
               </div>
             </div>
           <% end %>
