--- a/app/views/helps/googleslides.html.erb
+++ b/app/views/helps/googleslides.html.erb
@@ -24,8 +24,8 @@
       <%= image_tag("methods/GoogleSlides/4.png", alt: "埋め込みコードをいじらずにそのままコピー") %>
     </li>
     <li>
-      <p>Portcutio の ’ホーム’ から、’スライド’ボタン をクリック</p>
-      <%= image_tag("methods/GoogleSlides/5.png", alt: "Portcurioの「ホーム」から「スライド」ボタンをクリックしてスライドの投稿画面へアクセス") %>
+      <p>Portcutio の ’ホーム’ から、’ファイル’ボタン をクリック</p>
+      <%= image_tag("methods/GoogleSlides/5.png", alt: "Portcurioの「ホーム」から「ファイル」ボタンをクリックしてファイルの投稿画面へアクセス") %>
     </li>
     <li>
       <p>コピーした埋め込みコードを<strong>いじらずにそのまま</strong>ペースト（貼り付ける）し、’Google Slides’ を選択して ’OK’ボタン をクリック</p>
