--- a/app/views/helps/powerpoint.html.erb
+++ b/app/views/helps/powerpoint.html.erb
@@ -20,8 +20,8 @@
       <%= image_tag("methods/PowerPoint/3.png", alt: "埋め込みコードをいじらずに、そのまま「コピー」ボタンをクリック") %>
     </li>
     <li>
-      <p>Portcutio の ’ホーム’ から、’スライド’ボタン をクリック</p>
-      <%= image_tag("methods/PowerPoint/4.png", alt: "Portcurioの「ホーム」から「スライド」ボタンをクリックしてスライドの投稿画面へアクセス") %>
+      <p>Portcutio の ’ホーム’ から、’ファイル’ボタン をクリック</p>
+      <%= image_tag("methods/PowerPoint/4.png", alt: "Portcurioの「ホーム」から「ファイル」ボタンをクリックしてファイルの投稿画面へアクセス") %>
     </li>
     <li>
       <p>コピーした埋め込みコードを<strong>いじらずにそのまま</strong>ペースト（貼り付ける）し、’PowerPoint’ を選択して ’OK’ボタン をクリック</p>
