--- a/app/views/helps/show.html.erb
+++ b/app/views/helps/show.html.erb
@@ -6,4 +6,8 @@
     <li><%= link_to 'Google Slides 投稿方法', googleslides_help_path %></li>
     <li><%= link_to 'PowerPoint 投稿方法', powerpoint_help_path %></li>
   </ul>
+
+  <%# <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ-WOeC4HFl14zsXfqckd1cvVbTOyWiH7DOAP3mTWKPAammGPIk-m2s0rzJ8Ffp_h8HN_774Meaz2ic/pubhtml?widget=true&amp;headers=false"></iframe> %>
+  <%# <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSemIw6zcnoF_pBjIonrxqn6fuvBIlRaoyp0v85Y6F3ktdxVpQ/viewform?embedded=true" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe> %>
+  <%# <iframe src="https://docs.google.com/document/d/e/2PACX-1vS-J1BebsIu0CzJ4Qh499AebnAXXdWYDMNhkEwBI2aXYLnMcoKSgGo-m-akItNFSKWpyCQ2x3Zkq38U/pub?embedded=true"></iframe> %>
 </div>
