--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -14,60 +14,81 @@
             <%= raw Rinku.auto_link(simple_format(h(micropost.content)), :all, 'target="_blank" rel="noopener noreferrer"') %>
           <% end %>
         </p>
-        <div class="links">
-          <% if micropost.links.present? %>
-            <% oembed = oembed_get(micropost.links) %>
-            <% if oembed %>   <!-- OEmbedの表示（YouTube, Twitter 等） -->
+        <% if micropost.links.present? %>
+          <% oembed = oembed_get(micropost.links) %>
+          <% if oembed %>   <!-- OEmbedの表示（YouTube, Twitter 等） -->
+            <div class="links">
               <div class="links-container">
-                <div class="oembed"><%= oembed.html_safe %></div>
-              </div>
-            <% elsif micropost.links.end_with?(".pdf") %> <!-- pdfリンクのプレビュー -->
-              <div class="links-container">
-                <% pdf_link = "https://drive.google.com/viewerng/viewer?embedded=true&url=#{micropost.links}" %>
-                <div class="pdf-container">
-                  <!-- <iframe class="pdf" data-src=<%= pdf_link %>></iframe> -->
-                  <iframe class="pdf" src=<%= pdf_link %>></iframe>
+                <div class="links-wrap">
+                  <%= oembed.html_safe %>
                 </div>
-              </div>
-            <% else %>  <!-- OGPの表示（Webサイト） -->
-              <% og = og_get(micropost.links) %>
-              <% if og %>
-                <div class="links-container">
-                  <figure>
-                    <% cache(og.images.first, expires_in: 600.seconds) do %>
-                      <% if og.title.present? %>
-                        <%= link_to image_tag(og.images.first, alt: og.title), og.url, target: :_blank, rel: "noopener noreferrer" %>
-                      <% elsif og.description.present? %>
-                        <%= link_to image_tag(og.images.first, alt: og.description), og.url, target: :_blank, rel: "noopener noreferrer" %>
-                      <% else %>
-                        <%= link_to image_tag(og.images.first), og.url, target: :_blank, rel: "noopener noreferrer" %>
-                      <% end %>
-                    <% end %>
-                    <figcaption>
-                      <span class=ogp_title><%= "[#{og.title}]" if og.title.present? %></span>
-                      <span class=ogp_description><%= og.description.truncate(150) if og.description.present? %>
-                    </figcaption>
-                  </figure>
-                </div>
-              <% end %>
-            <% end %>
-          <% end %>
-          <% if micropost.file_link.present? %>
-            <div class="links-container">
-              <div class="file-container">
-                <% if micropost.file_type == 'pdf_link' %>
-                  <% pdf_file_link = "https://drive.google.com/viewerng/viewer?embedded=true&url=#{micropost.file_link.html_safe}" %>
-                  <iframe src=<%= pdf_file_link %>></iframe>
-                <% elsif micropost.file_type == 'pdf_google' %>
-                  <% file_id = micropost.file_link.html_safe.split("/")[5] %>
-                  <iframe src="https://drive.google.com/file/d/<%= file_id %>/preview"></iframe>
-                <% else %>
-                  <%= micropost.file_link.html_safe %>
-                <% end %>
               </div>
             </div>
+          <% elsif micropost.links.end_with?(".pdf") %> <!-- pdfリンクのプレビュー -->
+            <div class="links">
+              <div class="links-container">
+                <div class="links-wrap file">
+                  <% pdf_link = "https://drive.google.com/viewerng/viewer?embedded=true&url=#{micropost.links}" %>
+                  <div class="pdf-container">
+                    <iframe class="pdf" src=<%= pdf_link %>></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% else %>  <!-- OGPの表示（Webサイト） -->
+            <% og = og_get(micropost.links) %>
+            <% if og %>
+              <div class="links ogp">
+                <div class="links-container">
+                  <div class="links-wrap">
+                    <figure>
+                      <% cache(og.images.first, expires_in: 600.seconds) do %>
+                        <% if og.title.present? %>
+                          <%= link_to image_tag(og.images.first, alt: og.title), og.url, target: :_blank, rel: "noopener noreferrer" %>
+                        <% elsif og.description.present? %>
+                          <%= link_to image_tag(og.images.first, alt: og.description), og.url, target: :_blank, rel: "noopener noreferrer" %>
+                        <% else %>
+                          <%= link_to image_tag(og.images.first), og.url, target: :_blank, rel: "noopener noreferrer" %>
+                        <% end %>
+                      <% end %>
+                      <figcaption>
+                        <span class=ogp_title><%= "[#{og.title}]" if og.title.present? %></span>
+                        <span class=ogp_description><%= og.description.truncate(150) if og.description.present? %>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            <% end %>
           <% end %>
-        </div>
+        <% end %>
+        <% if micropost.file_link.present? %>
+          <div class="links">
+            <div class="links-container">
+              <div class="links-wrap file">
+                <div class="file-container">
+                  <% if micropost.file_type.value == 'PDF_link' %>
+                    <% link_url = "https://drive.google.com/viewerng/viewer?embedded=true&url=#{micropost.file_link.html_safe}" %>
+                    <iframe src=<%= link_url %>></iframe>
+                  <% elsif micropost.file_type.value == 'GooglePDF' %>
+                    <% file_id = micropost.file_link.html_safe.split("/")[5] %>
+                    <% link_url = "https://drive.google.com/file/d/#{file_id}/preview" %>
+                    <iframe src="<%= link_url %>"></iframe>
+                  <% elsif micropost.file_category == "Google" %>
+                    <% link_url = micropost.file_link.html_safe[/src="(.*?)\?/, 1] %>
+                    <%= micropost.file_link.html_safe %>
+                  <% else %>
+                    <% link_url = micropost.file_link.html_safe[/src="(.*?)\"/, 1] %>
+                    <%= micropost.file_link.html_safe %>
+                  <% end %>
+                  <div class="text-right">
+                    <%= link_to "別タブで開く", link_url, target: :_blank, rel: "noopener noreferrer" %>
+                  </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+        
         <% if micropost.image.attached? %>
           <!-- link_to micropost.display_image, "data-lightbox": micropost.display_image do %>-->
           <%= image_tag micropost.display_image %>
