--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -789,55 +789,69 @@ input {
     margin-top: 5px;
   }
   .links {
-    margin: 10px 0px;
+    margin: 20px 0px 10px;
     .links-container {
       background-color: #eeeeee80;
-      background-size: contain;
-      display: inline-block;
-      padding: 20px 20px 15px;
-      width: 400px;
-      max-width: 100%;
-      figure {
-        padding-bottom: 10px;
-        display: table;
-        img {
-          padding: 0;
-          margin: 0;
-          max-width: 400px;
-          max-height: 400px;
-          width: 100%;
-        }
-        figcaption {
-          font-size: 0.9em;
-          color: gray;
-          caption-side: bottom;
-          display: table-caption;
-        }
-      }
-      .oembed {
+      padding: 30px 20px;
+      .links-wrap {
+        background-size: contain;
         width: 100%;
-        max-width: 400px;
+        aspect-ratio: 4 / 3;
+        figure {
+          padding-bottom: 10px;
+          display: table;
+          width: 100%;
+          height: 100%;
+          // img {
+          //   max-width: 400px;
+          //   max-height: 400px;
+          //   width: 100%;
+          //   height: 100%;
+          // }
+          figcaption {
+            font-size: 0.9em;
+            color: gray;
+            caption-side: bottom;
+            display: table-caption;
+          }
+        }
         iframe {
           width: 100%;
+          height: 100%;
         }
-      }
-      .ogp_title { font-weight:bold; }
-      .pdf-container {
-        width: 100%;
-        max-width: 400px;
-        iframe {
+        .ogp_title { font-weight:bold; }
+        .pdf-container {
           width: 100%;
-          min-height: 250px;
+          max-width: 600px;
+          iframe {
+            width: 100%;
+            height: 100%;
+            min-height: 250px;
+          }
         }
-      }
-      .file-container {
-        width: 100%;
-        max-width: 400px;
-        iframe {
+        .file-container {
           width: 100%;
-          height: 250px;
+          height: 100%;
+          iframe {
+            width: 100%;
+            height: 100%;
+            min-height: 250px;
+          }
         }
       }
+      .file {
+        min-height: 250px;
+      }
+    }
+  }
+  .ogp {
+    width:fit-content !important;
+    .links-wrap { aspect-ratio: auto !important; }
+    figure {
+      max-width: 400px;
+      max-height: 400px;
+      height: auto !important;
+      img { padding: 0; }
     }
   }
   .response-form {
