--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -8,8 +8,7 @@
       </h1>
       <div class=top_description>
         <h2>
-          Portcurio（ポートキュリオ）は世界中の教材を集約し、協力してブラッシュアップしていくことを目的としています。ご自身の教材のポートフォリオとしても活用してください。<br>
-          詳しくは<%= link_to "コチラ", "https://alfnet.info/web-dev05/", target: :_blank, rel: "noopener noreferrer" %>。
+          Portcurio（ポートキュリオ）は世界中の教材を集約し、協力してブラッシュアップしていくことを目的としています。ご自身の教材のポートフォリオとしても活用してください。詳しくは<%= link_to "コチラ", "https://alfnet.info/web-dev05/", target: :_blank, rel: "noopener noreferrer" %>。
         </h2>
       </div>
     </div>
