--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -822,7 +822,7 @@ input {
         .ogp_title { font-weight:bold; }
         .pdf-container {
           width: 100%;
-          max-width: 600px;
+          height: 100%;
           iframe {
             width: 100%;
             height: 100%;
