--- a/app/views/files/set.js.erb
+++ b/app/views/files/set.js.erb
@@ -1,6 +1,6 @@
 $(".file_post_modal").html("")
 
-$("#micropost_file_type").val("<%= @micropost.file_type %>")
+$("#micropost_file_type").val("<%= @micropost.file_type.value %>")
 $("#micropost_file_link").val('<%= escape_javascript(@micropost.file_link.html_safe) %>')
 
 <% if @micropost.created_at.present? %>
